# project 2/routes/index.js
@@ -4,6 +4,22 @@ const passport = require("passport");
 
 router.get("/login", passport.authenticate("github"));
 
+router.get("/logout", (req, res, next) => {
+    req.logout(function (err) {
+        if (err) {
+            return next(err);
+        }
+
+        req.session.destroy((err) => {
+            if (err) {
+                return next(err);
+            }
+
+            res.redirect("/api-docs");
+        });
+    });
+});
+
 
 router.get("/", (req, res) => { 
     res.json({ message: "Hello, to Student Course Management API" });
